--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,43 @@
 group 'com.withwiz'
 
-def version = '0.1'
-
-version = "$version"
+version = "0.1.1"
 
 apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'com.novoda.bintray-release'
 
 sourceCompatibility = 1.6
 
 compileJava.options.encoding = "UTF-8"
 
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.novoda:bintray-release:0.3.4"
+    }
+}
+
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-
     compile "org.slf4j:slf4j-api:1.7.9"
     compile "ch.qos.logback:logback-classic:1.1.2"
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
-            pom.artifactId = 'jellyfish'
-            pom.groupId = 'com.withwiz'
-            pom.version = "$version"
-            pom.packaging = 'jar'
-        }
-    }
+publish {
+    userOrg = 'greeun'
+    groupId = 'com.withwiz'
+    artifactId = 'jellyfish'
+    publishVersion = '0.1.1'
+    desc = 'Jellyfish is service structure interfaces set.'
+    website = 'https://github.com/greeun/jellyfish'
+    issueTracker = '${website}/issues'
+    repository = "${website}.git"
 }
