--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'com.withwiz'
 
 version = "0.1.1"
+version "${version}"
 
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
@@ -35,7 +36,7 @@ publish {
     userOrg = 'greeun'
     groupId = 'com.withwiz'
     artifactId = 'jellyfish'
-    publishVersion = '0.1.1'
+    publishVersion = property('version')
     desc = 'Jellyfish is service structure interfaces set.'
     website = 'https://github.com/greeun/jellyfish'
     issueTracker = '${website}/issues'
